terraform/eks_module/objects/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aws-container-nginx
  labels:
    app: aws-container-nginx
  namespace: joo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: aws-container-nginx
  template:
    metadata:
      labels:
        app: aws-container-nginx
    spec:
      containers:
        - image: {accountId}.dkr.ecr.ap-northeast-2.amazonaws.com/test_eks-aws-container-nginx:1.0.0
          imagePullPolicy: Always
          name: aws-container-nginx
          ports:
            - containerPort: 80
              protocol: TCP
