terraform/eks_module/objects/service-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: aws-container-nginx
  namespace: joo
spec:
  selector:
    app: aws-container-nginx
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
