terraform/eks_module/objects/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aws-container-nginx
  namespace: joo
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
spec:
  selector:
    app: aws-container-nginx
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
